--- a/index.html
+++ b/index.html
@@ -2,14 +2,28 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8" />
-	<title>-TITLE HERE</title>
+	<title>Title</title>
 	
 	<link rel="stylesheet" href="css/normalize.css" />
 	<link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="css/unsemantic-grid-responsive.css" />
 	
 </head>
+
 <body>
 
+<div class="grid-contrainer" id="content">
+
+<nav class="grid-100">
+</nav>
+
+<div id="side" class="grid-25">
+</div>
+
+<div id="main" class="grid-75">
+</div>
+
+</div>
 
 </body>
 </html>
