--- a/index.html
+++ b/index.html
@@ -2,7 +2,16 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8" />
-	<title>Title</title>
+    <meta
+    	name="viewport"
+        content="
+        	width=device-width,
+            initial-scale=1,
+            minimum-scale=1,
+            maximum-scale=1
+            "
+            />
+	<title>Airway Heights Farmer's Market</title>
 	
 	<link rel="stylesheet" href="css/normalize.css" />
 	<link rel="stylesheet" href="css/styles.css" />
@@ -12,18 +21,54 @@
 
 <body>
 
-<div class="grid-contrainer" id="content">
+<div class="grid-container" id="content">
+
+<div id="banner" class="grid-100">
+
+<img id="banner" src="img/testbanner.jpg" alt="Farmer's Market Test Banner"/>
+
+</div>
+
+<div id="main" class="grid-100">
 
 <nav class="grid-100">
+
+	<ul id="menu" class="grid-100">
+    <li>Home</li>
+    <li>Vendors</li>
+    <li>Membership</li>
+    <li>Events</li>
+    <li>Contact</li>
+    </ul>
+    
 </nav>
 
-<div id="side" class="grid-25">
+<div id="side" class="grid-20">
+
+	<p id="sidebanner">Visit the Market</p>
+
+	<ul class="grid-100">
+    <li>Directions to Market</li>
+    <li>Recipes from Market</li>
+    <li>Thank you!</li>
+    </ul>
+
+
 </div>
 
-<div id="main" class="grid-75">
+<div id="content" class="grid-80" class="grid-container">
+
+<p class="grid-50"><p id="contentbanner">Visit the Market</p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent tristique at tortor vel interdum. Aliquam interdum molestie dolor vitae lobortis. Donec dictum ac elit eget vestibulum. Nam dapibus dui eget arcu pharetra blandit. Cras ultrices nisi non orci feugiat, sit amet tristique quam convallis. Duis in fringilla nunc. Duis non urna non odio facilisis scelerisque. In sollicitudin porta sem, et tristique tellus convallis ac. Curabitur est nunc, sagittis vel aliquet non, vulputate eu ligula. Suspendisse a ligula ac tellus luctus tincidunt ut id tortor. Maecenas vitae posuere elit.</p>
+
+
+
 </div>
 
 </div>
+
+<footer class="grid-100">
+	<p>footer stuff oh my goooood</p>
+</footer>
 
 </body>
 </html>
