--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <body>
 
-<div class="grid-container" id="content">
+<div class="grid-container">
 
 <div id="banner" class="grid-100">
 
@@ -34,11 +34,11 @@
 <nav class="grid-100">
 
 	<ul id="menu" class="grid-100">
-    <li>Home</li>
-    <li>Vendors</li>
-    <li>Membership</li>
-    <li>Events</li>
-    <li>Contact</li>
+    <li><a href="#">Home</a></li>
+    <li><a href="#">Vendors</a></li>
+    <li><a href="#">Membership</a></li>
+    <li><a href="#">Events</a></li>
+    <li><a href="#">Contact</a></li>
     </ul>
     
 </nav>
@@ -48,26 +48,39 @@
 	<p id="sidebanner">Visit the Market</p>
 
 	<ul class="grid-100">
-    <li>Directions to Market</li>
-    <li>Recipes from Market</li>
-    <li>Thank you!</li>
+    <li><a href="#">Directions to Market</a></li>
+    <li><a href="#">Recipes from Market</a></li>
+    <li><a href="#">Thank you!</a></li>
     </ul>
 
 
 </div>
 
-<div id="content" class="grid-80" class="grid-container">
+<div id="content" class="grid-80">
 
-<p class="grid-50"><p id="contentbanner">Visit the Market</p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent tristique at tortor vel interdum. Aliquam interdum molestie dolor vitae lobortis. Donec dictum ac elit eget vestibulum. Nam dapibus dui eget arcu pharetra blandit. Cras ultrices nisi non orci feugiat, sit amet tristique quam convallis. Duis in fringilla nunc. Duis non urna non odio facilisis scelerisque. In sollicitudin porta sem, et tristique tellus convallis ac. Curabitur est nunc, sagittis vel aliquet non, vulputate eu ligula. Suspendisse a ligula ac tellus luctus tincidunt ut id tortor. Maecenas vitae posuere elit.</p>
+<h1>Visit the Market</h1>
 
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent tristique at tortor vel interdum. Aliquam interdum molestie dolor vitae lobortis. Donec dictum ac elit eget vestibulum. Nam dapibus dui eget arcu pharetra blandit. Cras ultrices nisi non orci feugiat, sit amet tristique quam convallis. Duis in fringilla nunc. Duis non urna non odio facilisis scelerisque. In sollicitudin porta sem, et tristique tellus convallis ac. Curabitur est nunc, sagittis vel aliquet non, vulputate eu ligula. Suspendisse a ligula ac tellus luctus tincidunt ut id tortor. Maecenas vitae posuere elit.</p>
 
+<img id="img1" class="image" src="img/photo1.jpg" width="320" height="256"/>
+
+<img id="img2" class="image" src="img/photo2.jpg" width="320" height="256"/>
+
+<h3>Lorem ipsum dolor sit amet:</h3>
+	<ul>
+    	<li>Praesent tristique at tortor vel</li>
+        <li>sed blandit urna</li>
+        <li>Proin bibendum dui non</li>
+        <li>porta volupast</li>
+    </ul>
+<img src="img/cards.png" width="167" height="172" id ="cards"/>
 
 </div>
 
 </div>
 
 <footer class="grid-100">
-	<p>footer stuff oh my goooood</p>
+	<p>&copy 2013 City of Airway Heights -- Site by Nicholas Binford</p>
 </footer>
 
 </body>
